# FFAST3_7_Siemens_Assistant

./: .gitignore  01_22_2026_DLL_Wizard_Fix.md  01_26_2026_Devices_Networks.csv  01_26_2026_PLC_Program_Blocks.csv  01_26_2026_PLC_Tags.csv  CLAUDE.md  New laptop.txt  Project Handoff Brief.txt  README.md  TIA Exporter Plan 20250919.txt  Untitled.txt  pyproject.toml  requirements.txt
.claude/agents/: engineer.md  fixer.md  researcher.md  reviewer.md  verifier.md
.claude/commands/: swarm-cleanup.md  swarm-status.md
.claude/workflows/: git_protocol.md  planning_protocol.md  swarm_protocol.md
scripts/: ensure_editable_install.ps1  generate_config.py
src/tia_tags_exporter/: app.py  app.py.bak.20250919_155724  app.py.bak.20250919_160030  app_boot.py  block_exporter.py  block_writer.py  config_store.py  config_store.py.bak_20250919_145512  devices_networks_exporter.py  discovery.py  excel_writer.py  hmi_exporter.py  hmi_flatteners.py  loader_multi.py  loader_multi.py.bak.20250919_160351  loader_multi.py.bak.20250919_160759  logging_utils.py  openness_bridge.py  openness_bridge.py.bak.20250919_151747  session.py  settings.py  tag_extractor.py  validation.py
src/tia_tags_exporter/gui/: __init__.py  dll_wizard_window.py  hmi_export_window.py  main_window.py  wizard.py  wizard.py.bak_20250919_142915  wizard.py.bak_20250919_143254  wizard.py.bak_20250919_144150  wizard.py.bak_20250919_144436
tests/: test_config_store.py  test_hmi_exporter.py  test_hmi_flatteners.py
