
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tia-tags-exporter"
version = "0.1.0"
description = "GUI tool to discover Siemens TIA Openness DLLs, attach to TIA V17, and export PLC Tag Tables to Excel"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Eric Schmidhuber"}]
license = {text = "MIT"}
dependencies = [
  "pythonnet>=3.0.2; platform_system=='Windows'",
  "PySide6>=6.6; platform_system=='Windows'",
  "openpyxl>=3.1",
]

[project.scripts]
tia-tags-exporter = "tia_tags_exporter.app:main"
